Added Razorpay config, exceptions, updated services, and uploaded documents